# scimitar

./: LICENSE.txt  README.md  main.py
doc/: Scimitar.md
lib/: CMakeLists.txt  main.cpp
lib/engine/: BasicStructures.cpp  BasicStructures.h  Engine.cpp  Engine.h  EngineAction.cpp  EngineAction.h  EngineAuxiliary.cpp  EngineAuxiliary.h  Group.cpp  Group.h
lib/frontend/: ParserFrontend.cpp  ParserFrontend.h  PythonInterface.cpp  PythonInterface.h  SourceFileStream.cpp  SourceFileStream.h
lib/grammar/: GrammarErrorHandler.cpp  GrammarErrorHandler.h  Scimitar.g4  ScimitarBaseVisitor.cpp  ScimitarBaseVisitor.h  ScimitarLexer.cpp  ScimitarLexer.h  ScimitarParser.cpp  ScimitarParser.h  ScimitarVisitor.h
lib/language/: ArithmeticExpression.cpp  ArithmeticExpression.h  ConditionalExpression.cpp  ConditionalExpression.h  Expression.cpp  Expression.h  LoopStatement.cpp  LoopStatement.h  UserFunction.cpp  UserFunction.h
lib/parameter/: Parameter.cpp  Parameter.h  ParameterValue.cpp  ParameterValue.h  Symbol.cpp  Symbol.h
scimitar/: __init__.py
scimitar/core/: RunConfiguration.py  __init__.py  cli.py
scimitar/core/modules/: BaseModules.py  CheckStatus.py  DirectoryStructure.py  HeaderModule.py  ResourceManager.py  __init__.py
scimitar/runtime/: Utility.py  __init__.py
scimitar/runtime/modules/: CheckStatus.py  DirectoryStructure.py  HeaderModule.py  ResourceManager.py  __init__.py
